--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -20,6 +20,28 @@ spec:
           env:
             - name: PORT
               value: "8080"
+          # 1. Set the hostname and port directly
+            - name: DB_HOST
+              value: "postgres-svc" # The K8s Service name
+            - name: DB_PORT
+              value: "5432"
+          # 2. Get the DB name from your ConfigMap
+            - name: DB_NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: postgres-configmap # The ConfigMap you already made
+                  key: POSTGRES_DB
+          # 3. Get the User and Password from your Secret
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret # The Secret you already made
+                  key: POSTGRES_USER
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_PASSWORD  
           resources:
             requests:
               cpu: "250m"
