--- a/app/src/package.json
+++ b/app/src/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "output-streaming",
 	"version": "1.0.0",
-	"description": "OutputStreaming Express server",
+	"description": "Output Streaming service connected to Kafka and PostgreSQL",
 	"main": "server.js",
 	"type": "module",
 	"scripts": {
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"express": "^4.18.2",
-		"pg": "8.16.3"
+		"pg": "8.16.3",
+		"ws": "^8.16.0"
 	}
 }
